Some updates to Java 17